--- a/app.json
+++ b/app.json
@@ -116,6 +116,6 @@
       "bot"
    ],
    "logo": "https://telegra.ph/file/d628825281f84f576a817.jpg",
-   "name": "SHaktiMaan",
-   "repository": "https://github.com/KshitijGagan/GroupBotV2"
+   "name": "Ryostar",
+   "repository": "https://github.com/ryostar/GroupBotV2"
 }
