--- a/app.json
+++ b/app.json
@@ -1,4 +1,7 @@
 {
+   "name": "Mizuki Bot",
+   "description": "An Anime themed Telegram group management bot.",
+   "repository": "https://github.com/ImJanindu/Mizuki",
    "addons": [
       {
          "options": {
@@ -7,115 +10,152 @@
          "plan": "heroku-postgresql"
       }
    ],
-   "description": "Telegram group management bot.",
    "env": {
-      "ALLOW_EXCL": {
-         "description": "Set this to True if you want ! to be a command prefix along with /",
+      "TOKEN": {
+         "description": "Your bot token. Get one from @BotFather",
+         "required": true,
+         "value": "1710520992:AAGwuADxiV6otWAx92YLVa3irk6tNU7btdI"
+      },
+      "API_ID": {
+         "description": "Get API_ID from my.telegram.org, used for telethon based modules.",
+         "required": true,
+         "value": "4445278"
+      },
+      "API_HASH": {
+         "description": "Get API_HASH from my.telegram.org, used for telethon based modules.",
+         "required": true,
+         "value": "34dd74d0f9917e1afbbe4f5d940c80a2"
+      },    
+      "SQLALCHEMY_DATABASE_URI": {
+         "description": "Your postgres sql db, empty this field if you dont have one.",
+         "required": false,
+         "value": ""
+      },      
+      "OWNER_ID": {
+         "description": "Your user ID as an integer.",
+         "required": true,
+         "value": "1739887825"
+      },
+      "OWNER_USERNAME": {
+         "description": "Your username without the @",
+         "value": "D0FFY"
+      },
+      "SUPPORT_CHAT": {
+         "description": "Your Telegram support group chat username without '@' like: InfinityJE",
+         "required": true,
+         "value": "-1001464284489"
+      },
+      "EVENT_LOGS": {
+         "description": "Event logs channel to note down important bot level events, recommend to make this public. ex: '-123456'",
+         "required": true,
+         "value": "-1001464284489"
+      },
+      "JOIN_LOGGER": {
+         "description": "A channel where bot will print who added it to what group, useful during debugging or spam handling.",
+         "required": true,
+         "value": "-1001464284489"
+      },  
+      "CASH_API_KEY": {
+         "description": "Required for currency converter. Get yours from https://www.alphavantage.co/support/#api-key",
+         "required": true,
+         "value": "UXIWBHYLISZ2JJ4L"
+      },
+      "TIME_API_KEY": {
+         "description": "Required for timezone information. Get yours from https://timezonedb.com/api",
+         "required": true,
+         "value": "IE9YEJKNKK8W"
+      },
+      "DEV_USERS": {
+         "description": "ID of users who are Devs of your bot.",
+         "required": false,
+         "value": "1739887825"
+      },
+      "SPAMWATCH_API": {
+         "description": "Spamwatch API Token, Get one from @SpamWatchBot.",
+         "required": false,
+         "value": ""
+      }, 
+      "STRICT_GBAN": {
+         "description": "Enforce gbans across new groups as well as old groups. When a gbanned user talks, he will be banned.",
          "value": "True"
       },
-      "BAN_STICKER": {
-         "description": "ID of the sticker you want to use when banning people.",
+      "DRAGONS": {
+         "description": "A space separated list of user IDs who you want to assign as sudo users.",
+         "required": false,
+         "value": "1739887825"
+      },
+      "DEMONS": {
+         "description": "A space separated list of user IDs who you wanna assign as support users(gban perms only).",
+         "required": false,
+         "value": "1739887825"
+      },
+      "TIGERS": {
+         "description": "A space separated list of user IDs who you wanna assign as tiger users.",
+         "required": false,
+         "value": "1739887825"
+      },
+      "WOLVES": {
+         "description": "A space separated list of user IDs who you want to assign as whitelisted - can't be banned with your bot.",
+         "required": false,
+         "value": "1739887825"
+      },
+      "ENV": {
+         "description": "Setting this to ANYTHING will enable environment variables. Leave it as it is",
+         "value": "ANYTHING"
+      },
+      "WEBHOOK": {
+         "description": "Setting this to ANYTHING will enable webhooks. If you dont know how this works leave it as it is",
+         "required": false,
+         "value": ""
+      },
+      "PORT": {
+         "description": "Port to use for your webhooks. Better leave this as it is on heroku",
+         "required": false,
+         "value": ""
+      },
+      "URL": {
+         "description": "The Heroku App URL :-  https://<appname>.herokuapp.com/",
+         "required": false,
+         "value": ""
+      },
+      "NO_LOAD": {
+         "description": "Dont load these modules cause they shit, space separation",
+         "required": false,
+         "value": "sed rss"
+      }, 
+      "BL_CHATS": {
+         "description": "List of chats you want blacklisted.",
+         "required": false,
+         "value": ""
+      },
+      "ALLOW_EXCL": {
+         "description": "Set this to True if you want ! to be a command prefix along with /. Recommended is True",
+         "value": "True"
+      },      
+      "DONATION_LINK": {
+         "description": "Optional: link where you would like to receive donations. If you are a noob, better leave it linking to paul",
          "required": false,
          "value": ""
       },
       "DEL_CMDS": {
          "description": "Set this to True if you want to delete command messages from users who don't have the perms to run that command.",
-         "value": "True" 
-      },
-      "ENV": {
-         "description": "Setting this to ANYTHING will enable environment variables.",
-         "value": "ANYTHING"
-      },
-      "SQLALCHEMY_DATABASE_URI": {
-         "description": "Your postgres sql db, empty this field if you dont have one.",
-         "required": false,
-         "value": "sqldbtype://username:pw@hostname:port/db_name"
-      },      
-      "OWNER_ID": {
-         "description": "Your user ID as an integer.",
-         "value": "1739887825"
-      },
-      "OWNER_USERNAME": {
-         "description": "Your username",
-         "value": "D0FFY"
-      },
-      "DEV_USERS": {
-         "description": "ID of users who are Dev (can use /py etc.)",
-         "required": false,
-         "value": "1739887825"
-      },
-      "GBAN_LOGS": {
-         "description": "Gban log channel, include the hyphen too: ex: -123456",
-         "value": "-1001464284489"
-      },
-      "CASH_API_KEY": {
-         "description": "Required for currency converter",
-         "value": "-xyz"
-      },
-      "TIME_API_KEY": {
-         "description": "Required for timezone information",
-         "value": "HW6LQCYX43HS"
-      },
-      "AI_API_KEY": {
-         "description": "for activate chatbot",
-         "value": "x_y_z"
-      },
-      "API_OPENWEATHER": {
-         "description": "Required for weather information",
-         "value": "5c5adc2bc1832de6943e3f4467e84c39"
-      },
-      "PORT": {
-         "description": "Port to use for your webhooks.",
-         "required": false,
-         "value": ""
-      },
-      "STRICT_GBAN": {
-         "description": "Enforce gbans across new groups as well as old groups. When a gbanned user talks, he will be banned.",
          "value": "True"
-      },
-      "SUDO_USERS": {
-         "description": "A space separated list of user IDs who you want to assign as sudo users.",
-         "required": false,
-         "value": "1739887825"
-      },
-      "SUPPORT_USERS": {
-         "description": "A space separated list of user IDs who you wanna assign as support users(gban perms only).",
-         "required": false,
-         "value": "1739887825"
-      },
-      "TIGER_USERS": {
-         "description": "A space separated list of user IDs who you wanna assign as tiger users.",
-         "required": false,
-         "value": "1739887825"
-      },
-      "TOKEN": {
-         "description": "Your bot token.",
-         "required": true,
-         "value": "1710520992:AAGwuADxiV6otWAx92YLVa3irk6tNU7btdI"
-      },
-      "URL": {
-         "description": "The Heroku App URL :-  https://<appname>.herokuapp.com/",
-         "required": false,
-         "value": "https://hoahongbot.herokuapp.com/"
-      },
-      "WEBHOOK": {
-         "description": "Setting this to ANYTHING will enable webhooks.",
+      },      
+      "BAN_STICKER": {
+         "description": "ID of the sticker you want to use when banning people.",
          "required": false,
          "value": ""
       },
-      "WHITELIST_USERS": {
-         "description": "A space separated list of user IDs who you want to assign as whitelisted - can't be banned with your bot.",
+      "WALL_API": {
+         "description": "Required for wallpaper. Get your's from https://wall.alphacoders.com/",
          "required": false,
-         "value": "1739887825"
+         "value": ""
+      },
+      "INFOPIC": {
+         "description": "pic",
+         "required": false,
+         "value": ""
       }
-   },
-   "keywords": [
-      "telegram",
-      "group",
-      "manager",
-      "bot"
-   ],
-   "logo": "https://telegra.ph/file/d628825281f84f576a817.jpg",
-   "name": "Ryostar",
-   "repository": "https://github.com/ryostar/GroupBotV2"
+      
+   }
 }
